BUG - pane width in a new tab is too small

--- a/styles/desktop/grid.less
+++ b/styles/desktop/grid.less
@@ -132,6 +132,10 @@ html.non-adjustable .panels {
 	width: 60%;
 	z-index: 1;
 	
+	.screens > & {
+		width: 100%;
+	}
+	
 	html.rtl & {
 		margin-left: 0px;
 		margin-right: -1px;
